# pd3f

./: .editorconfig  .gitignore  Dockerfile  LICENSE  Pipfile  Procfile  README.md  app.py  dev.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  example_api.py  prod.sh  push_image.sh  pyproject.toml  test.sh  test2.sh
pd3f/: app.py
pd3f-dashboard/: Dockerfile
pd3f-ocr/: Dockerfile  build.sh  dev.sh  push_image.sh
pd3f/templates/: index.html  result.html
pdddf-ocr/: Dockerfile  build.sh  ocr_folder.sh
pdddf-service/: app.py  text.py
pdddf-service/templates/: index.html  result.html
