[tool.poetry]
name = "pd3f-service"
version = "0.0.0"
description = "Flask Micro Service + Web-based GUI for pd3f-core"
license = "GPL-3.0-only"
authors = ["Johannes Filter <hi@jfilter.de>"]
repository = "https://github.com/pd3f/pd3f"
readme = "README.md"


[tool.poetry.dependencies]
flask = "^1.1.0"
gunicorn = "*"
rq = ">=1.5"
rq-scheduler = "*"
redis = "*"
python = "^3.8"
shortuuid = "^1.0.0"
pd3f = "^0.2.0"
sentry-sdk = {version = "0.16.2", extras = ["flask"]}

[tool.poetry.dev-dependencies]
unidecode = "*"
pytest = "*"
pylint = "*"
black = {version = "*", allow-prereleases = true, python = ">=3.6"}



[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
