[tool.poetry]
authors = ["Johannes Filter <hi@jfilter.de>"]
description = "Flask Micro Service + Web-based GUI for pd3f-core"
license = "AGPL-3.0-only"
name = "pd3f-service"
readme = "README.md"
repository = "https://github.com/pd3f/pd3f"
version = "0.4.0"

[tool.poetry.dependencies]
click = "^7.1.2"
flask = "^1.1.0"
gunicorn = "*"
pd3f = "^0.3.0"
python = "^3.8"
redis = "*"
rq = "^1.5.2"
rq-scheduler = "*"
sentry-sdk = {version = "0.16.2", extras = ["flask"]}
shortuuid = "^1.0.0"

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true, python = ">=3.6"}
pylint = "*"
pytest = "*"
unidecode = "*"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
