[tool.poetry]
authors = ["Johannes Filter <hi@jfilter.de>"]
description = "Flask Micro Service + Web-based GUI for pd3f-core"
license = "AGPL-3.0-only"
name = "pd3f-service"
readme = "README.md"
repository = "https://github.com/pd3f/pd3f"
version = "0.5.0"

[tool.poetry.dependencies]
click = "^7.1.2"
flask = "^1.1.0"
gunicorn = "^20.0.4"
pd3f = "~0.4.0"
python = "~3.8"
redis = "^3.5.3"
rq = "1.5.2"
rq-scheduler = "^0.11.0"
sentry-sdk = {version = "^1.0.0", extras = ["flask"]}
shortuuid = "^1.0.0"

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true, python = ">=3.6"}
pylint = "*"
pytest = "*"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
